# swift-sentencepiece

./: .bazelrc  .gitignore  BUILD.bazel  Package.swift  README.md  WORKSPACE  clang.bazelrc  deps.bzl
Sources/: BUILD.bazel  SentencePiece.swift
Sources/C_sentencepiece/: C_sentencepiece.h  module.modulemap  sentencepiece.cc
