load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_interop_hint")

cc_library(
    name = "C_sentencepiece",
    srcs = glob(["C_sentencepiece/*.cc"]),
    hdrs = ["C_sentencepiece/C_sentencepiece.h"],
    includes = ["C_sentencepiece"],
    tags = ["swift_module=C_sentencepiece"],
    visibility = ["//:__pkg__"],
    deps = [
        "@sentencepiece",
    ],
    aspect_hints = [":C_sentencepiece_swift_interop"],
)

swift_interop_hint(
    name = "C_sentencepiece_swift_interop",
    module_name = "C_sentencepiece",
)

filegroup(
    name = "Sources",
    srcs = glob(["*.swift"]),
    visibility = ["//:__pkg__"],
)
